--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
-		<title>Landing Exipure &#8211; Dominando O Metabolismo</title>
+		<title>Tropical Loophole" Has Helped Thousands Cheat the Scale and Drop Sizes WITHOUT Restrictive Dieting or Intense Exercise</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
